syntax = "proto3";

package stream;

import "structs.proto";

service Consul {
    rpc Subscribe(SubscribeRequest) returns (stream Event) {}
} 

enum Topic {
    ServiceHealth = 0;
}
  
message SubscribeRequest {
    Topic Topic = 1;
    string Key = 2;
    string Token = 3;
    uint64 Index = 4;
    string Filter = 5;
    Filters TopicFilters = 6;
}

message Event {
    Topic Topic = 1;
    string Key = 2;
    uint64 Index = 3;
    repeated ACLRule RequiredACLs = 4;
    Operation Op = 5;
    oneof Payload {
        ServiceHealthUpdate ServiceHealth = 6;
        bool EndOfSnapshot = 7;
    }
}

enum Operation {
    Upsert = 0;
    Delete = 1;
}

enum ACLResource {
    ServiceACL = 0;
    NodeACL = 1;
}

message ACLRule {
    ACLResource Resource = 1;
    string Segment = 2; 
}

message ServiceHealthUpdate {
    CheckServiceNode CheckServiceNode = 1;
}

message Filters {
    bool Connect = 1;
    repeated string Tags = 2;
}